added message while importing contacts

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -15,6 +15,7 @@
   <div id ="loading_div">
     <p align="center"><%= image_tag("ajax-loader.gif") %></p>
   </div>
+  <div id="loading-message" style="text-align: center; width: 100%"></div>
   <!-- TO-DO move this js code to index.js.erb. I tried, but seems that UJS is not working. I recomend to update rails -->
   <script type="text/javascript">
     $(document).ready(function() {
