--- a/app/views/contacts/_import_form.html.erb
+++ b/app/views/contacts/_import_form.html.erb
@@ -11,6 +11,8 @@
     $.ajax({
       type: "POST",
       url: "<%= import_contacts_path() -%>",
+      beforeSend: function(xhr){$("#loading-message").html("Importing contacts")},
+      success: function(data){$("#loading-message").html("Redirecting to contact list. Please wait...")},
       data: $("#contact").serialize()
     });
 
