--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,7 +2,7 @@
   <div id ="loading_div">
     <p align="center"><%= image_tag("ajax-loader.gif") %></p>
   </div>
-  <div id="loading-message" style="text-align: center; width: 100%"></div>
+  <div id="loading-message" style="text-align: center; width: 100%; font-weight: bold;"></div>
   <div class="title_wrapper clearfix">
     <div class="cont_title"><h1>Edit <%= resource_name.to_s.humanize %></h1></div>
   </div>
