--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -1,109 +1,108 @@
-/* line 7, ../../app/stylesheets/ie.scss */
-body.bp {
-  text-align: center;
-}
-/* line 44, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-* html body.bp legend {
-  margin: 0px -8px 16px 0;
-  padding: 0;
-}
-/* line 48, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-html > body.bp p code {
-  *white-space: normal;
-}
-/* line 60, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp .container {
-  text-align: left;
-}
-/* line 62, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp sup {
-  vertical-align: text-top;
-}
-/* line 64, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp sub {
-  vertical-align: text-bottom;
-}
-/* line 66, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp hr {
-  margin: -8px auto 11px;
-}
-/* line 68, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp img {
-  -ms-interpolation-mode: bicubic;
-}
-/* line 70, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp fieldset {
-  padding-top: 0;
-}
-/* line 72, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp legend {
-  margin-top: -0.2em;
-  margin-bottom: 1em;
-  margin-left: -0.5em;
-}
-/* line 76, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp fieldset, body.bp #IE8#HACK {
-  padding-top: 1.4em;
-}
-/* line 77, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp legend, body.bp #IE8#HACK {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-/* line 78, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp textarea {
-  overflow: auto;
-}
-/* line 80, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp label {
-  position: relative;
-  top: -0.25em;
-}
-/* line 84, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.text {
-  margin: 0.5em 0;
-  background-color: white;
-  border: 1px solid #bbbbbb;
-}
-/* line 88, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.text:focus {
-  border: 1px solid #666666;
-}
-/* line 90, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.title {
-  margin: 0.5em 0;
-  background-color: white;
-  border: 1px solid #bbbbbb;
-}
-/* line 94, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.title:focus {
-  border: 1px solid #666666;
-}
-/* line 96, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.checkbox {
-  position: relative;
-  top: 0.25em;
-}
-/* line 99, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.radio {
-  position: relative;
-  top: 0.25em;
-}
-/* line 102, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp input.button {
-  position: relative;
-  top: 0.25em;
-}
-/* line 105, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp textarea {
-  margin: 0.5em 0;
-}
-/* line 107, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp select {
-  margin: 0.5em 0;
-}
-/* line 109, ../../../.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets/blueprint/_ie.scss */
-body.bp button {
-  position: relative;
-  top: 0.25em;
-}
+/*
+Syntax error: File to import not found or unreadable: blueprint.
+              Load paths:
+                Compass::SpriteImporter
+                /Users/michaelbivone/campusmack/public/stylesheets/sass
+                /Users/michaelbivone/campusmack/app/stylesheets
+                /Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets
+                /Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/compass/stylesheets
+        on line 1 of /Users/michaelbivone/campusmack/app/stylesheets/ie.scss
+
+1: @import "blueprint";
+2: 
+3: // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
+4: // +blueprint-ie
+5: 
+6: //Recommended Blueprint configuration with scoping and semantic layout:
+
+Backtrace:
+/Users/michaelbivone/campusmack/app/stylesheets/ie.scss:1
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/import_node.rb:64:in `rescue in import'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/import_node.rb:42:in `import'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/import_node.rb:25:in `imported_file'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:149:in `rescue in visit_import'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:154:in `visit_import'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:37:in `visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:53:in `map'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:27:in `block in visit_children'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:47:in `visit_root'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/base.rb:37:in `visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/tree/root_node.rb:20:in `render'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/engine.rb:293:in `_render'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/engine.rb:241:in `block in render'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/util.rb:297:in `silence_sass_warnings'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/engine.rb:241:in `render'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:319:in `update_stylesheet'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:181:in `block (2 levels) in update_stylesheets'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:175:in `each'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:175:in `block in update_stylesheets'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:173:in `each'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/compiler.rb:173:in `update_stylesheets'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin.rb:81:in `update_stylesheets'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin.rb:54:in `check_for_updates'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/sass-3.1.8/lib/sass/plugin/rack.rb:51:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/client_side_validations-3.1.0/lib/client_side_validations/middleware.rb:18:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/warden-1.0.5/lib/warden/manager.rb:35:in `block in call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/warden-1.0.5/lib/warden/manager.rb:34:in `catch'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/warden-1.0.5/lib/warden/manager.rb:34:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/head.rb:14:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/methodoverride.rb:24:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/flash.rb:182:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/cookies.rb:302:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activerecord-3.0.10/lib/active_record/query_cache.rb:32:in `block in call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activerecord-3.0.10/lib/active_record/connection_adapters/abstract/query_cache.rb:28:in `cache'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activerecord-3.0.10/lib/active_record/query_cache.rb:12:in `cache'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activerecord-3.0.10/lib/active_record/query_cache.rb:31:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activerecord-3.0.10/lib/active_record/connection_adapters/abstract/connection_pool.rb:354:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/callbacks.rb:46:in `block in call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activesupport-3.0.10/lib/active_support/callbacks.rb:421:in `_run_call_callbacks'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/sendfile.rb:106:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/rack/logger.rb:13:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/runtime.rb:17:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/activesupport-3.0.10/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/lock.rb:11:in `block in call'
+<internal:prelude>:10:in `synchronize'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/lock.rb:11:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/static.rb:30:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/actionpack-3.0.10/lib/action_dispatch/middleware/static.rb:30:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/application.rb:168:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/application.rb:77:in `method_missing'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/rack/log_tailer.rb:14:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/content_length.rb:13:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/chunked.rb:15:in `call'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/connection.rb:84:in `block in pre_process'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/connection.rb:82:in `catch'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/connection.rb:82:in `pre_process'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/connection.rb:57:in `process'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/connection.rb:42:in `receive_data'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/eventmachine-0.12.10/lib/eventmachine.rb:256:in `run_machine'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/eventmachine-0.12.10/lib/eventmachine.rb:256:in `run'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/backends/base.rb:61:in `start'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/thin-1.2.11/lib/thin/server.rb:159:in `start'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/handler/thin.rb:14:in `run'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/rack-1.2.4/lib/rack/server.rb:217:in `start'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/commands/server.rb:65:in `start'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/commands.rb:30:in `block in <top (required)>'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/commands.rb:27:in `tap'
+/Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/railties-3.0.10/lib/rails/commands.rb:27:in `<top (required)>'
+script/rails:6:in `require'
+script/rails:6:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: blueprint.\A               Load paths:\A                 Compass::SpriteImporter\A                 /Users/michaelbivone/campusmack/public/stylesheets/sass\A                 /Users/michaelbivone/campusmack/app/stylesheets\A                 /Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/blueprint/stylesheets\A                 /Users/michaelbivone/.rvm/gems/ruby-1.9.2-p180@rails3tutorial/gems/compass-0.11.5/frameworks/compass/stylesheets\A         on line 1 of /Users/michaelbivone/campusmack/app/stylesheets/ie.scss\A \A 1: @import \"blueprint\";\A 2: \A 3: // To generate css equivalent to the blueprint css but with your configuration applied, uncomment:\A 4: // +blueprint-ie\A 5: \A 6: //Recommended Blueprint configuration with scoping and semantic layout:"; }
