--- a/app/views/conferences/_stats.html.erb
+++ b/app/views/conferences/_stats.html.erb
@@ -7,7 +7,7 @@
 
   <% conference.colleges.limit(limit).order('smacks_count desc').each do |college| %>
       <div class="cell clearfix"> <%# FIXME add noborder class to the last item %>
-        <div class="black colname"><%= link_to college.name.split.first, college %></div>
+        <div class="black colname"><%= link_to college.abbrev, college %></div>
         <div class="green smcount"><%= college.smacks_count %></div>
         <div class="red redcount"><%= college.redemptions_count %></div>
       </div>
