--- a/app/views/conferences/status.html.erb
+++ b/app/views/conferences/status.html.erb
@@ -5,7 +5,7 @@
 <div class="content standard clearfix">
   <div class="content_title"><h1>Statistics</h1></div>
   <div class="content_container fullstats clearfix">
-    <% Conference.all.each do |conference| %>
+    <% @conferences.each do |conference| %>
       <ul class="statistics">
         <%= render :partial => 'statistics', :locals => { :conference => conference, :limit => nil } %>
       </ul>
