--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -5,131 +5,113 @@
   <div class="title_box">
     <h2>FILL IN THE FOLLOWING TO SUBMIT A SMACK</h2>
   </div>
-  <div class="form_container">
-  <%= form_for [@parent, @post], :html => {:multipart => true}, :validate => true do |f| %>
-    <% # Rendering content to javascript variables to switch later on  %>
-    <% content_for :js do %>
-        var postcontent = [];
-        postcontent[0] = '<%= f.fields_for :video, Video.new do |vf| %>
-            <div class="field">
-              <%= vf.label :url %>
-              <br/>
-              <%= vf.text_field :url %>
-            </div>
-        <% end.gsub(/\r|\n/, '').html_safe %>
-        ';
-        postcontent[1] = '<%= f.fields_for :photo, Photo.new do |pf| %>
-            <div class="field">
-              <%= pf.label :image, 'Photo' %>
-              <br/>
-              <%= pf.file_field :image %>
-            </div>
-        <% end.gsub(/\r|\n/, '').html_safe %>
-        ';
-        postcontent[2] = '<%= f.fields_for :news_post, NewsPost.new do |npf| %>
-            <div class="field">
-              <%= npf.label :url %>
-              <br/>
-              <%= npf.text_field :url %>
-            </div>
-            <div id="news_post_addons">
-              <a href="#" id="news_add_photo">Add photo</a> or <a href="#" id="news_add_video">Add video</a>
-            </div>
-            <div class="field hidden" id="news_photo_div">
-              <%= npf.label :image, 'Photo' %>
-              <br/>
-              <%= npf.file_field :image %>
-            </div>
-            <div class="field hidden" id="news_video_div">
-              <%= npf.label :video_url %>
-              <br/>
-              <%= npf.text_field :video_url %>
-            </div>
-        <% end.gsub(/\r|\n/, '').html_safe %>';
-        postcontent[3] = '<%= f.fields_for :statistic, Statistic.new do |sf| %>
-            <div class="field">
-              <%= sf.label :name %>
-              <br/>
-              <%= sf.text_field :name %>
-            </div>
-            <div class="field">
-              <%= sf.label :data %>
-              <br/>
-              <%= sf.text_field :data %>
-            </div>
-        <% end.gsub(/\r|\n/, '').html_safe %>
-        ';
-        function switch_fields(num) {
-        $("div.content-switch a.pressed").removeClass("pressed");
-        $("#shifting_fields").html(postcontent[num]);
-        switch(num) {
-        case 0: $("#switch_video").addClass("pressed"); break;
-        case 1: $("#switch_photo").addClass("pressed"); break;
-        case 2: $("#switch_news").addClass("pressed"); break;
-        case 3: $("#switch_stats").addClass("pressed"); break;
-        }
-        }
-    <% end %>
-    <% content_for :jq do %>
-        $("#switch_video").click(function(){switch_fields(0); return false;});
-        $("#switch_photo").click(function(){switch_fields(1); return false;});
-        $("#switch_news").click(function(){switch_fields(2); return false;});
-        $("#switch_stats").click(function(){switch_fields(3); return false;});
-        $("#news_add_photo").live('click',function(e){e.preventDefault(); $("#news_post_addons").hide(); $("#news_photo_div").show();});
-        $("#news_add_video").live('click',function(e){e.preventDefault(); $("#news_post_addons").hide(); $("#news_video_div").show();});
-    <% end %>
-    <%= render 'shared/error_messages', :object => f.object %>
-    <ul class="no-bullets">
-      <li>
-        <div class="field">
-          <%= f.label :title %>
-          <br/>
-          <%= f.text_field :title %>
-        </div>
-      </li>
-      <% if can? :manage, Post %>
-          <li>
-            <div class="field">
-              <%= f.label :on_frontpage_week, 'Smack of the Week on this week' %>
-              <br/>
-              <%= f.select(:on_frontpage_week, (Date.today.cweek..52).to_a, {:include_blank => true}) %>
-            </div>
-          </li>
+  <div class="form_container create_post">
+    <div class="form_wrapper">
+      <%= form_for [@parent, @post], :html => {:multipart => true}, :validate => true do |f| %>
+      <% # Rendering content to javascript variables to switch later on  %>
+      <% content_for :js do %>
+          var postcontent = [];
+          postcontent[0] = '<%= f.fields_for :video, Video.new do |vf| %>
+            <tr>
+              <td class="description"><%= vf.label :url, 'URL:' %></td>
+              <td class="entry"><%= vf.text_field :url %></td>
+            </tr>
+          <% end.gsub(/\r|\n/, '').html_safe %>
+          ';
+          postcontent[1] = '<%= f.fields_for :photo, Photo.new do |pf| %>
+            <tr>
+              <td class="description"><%= pf.label :image, 'Photo:' %></td>
+              <td class="entry"><%= pf.file_field :image %></td>
+            </tr>
+          <% end.gsub(/\r|\n/, '').html_safe %>
+          ';
+          postcontent[2] = '<%= f.fields_for :news_post, NewsPost.new do |npf| %>
+            <tr>
+              <td class="description"><%= npf.label :url, 'URL:' %></td>
+              <td class="entry"><%= npf.text_field :url %></td>
+            </tr>
+            <tr id="news_post_addons">
+              <td class="description"></td>
+              <td class="entry"><a href="#" id="news_add_photo">Add photo</a> or <a href="#" id="news_add_video">Add video</a></td>
+            </tr>
+            <tr class="hidden" id="news_photo_div">
+              <td class="description"><%= npf.label :image, 'Photo:' %></td>
+              <td class="entry"><%= npf.file_field :image %></td>
+            </tr>
+            <tr class="hidden" id="news_video_div">
+              <td class="description"><%= npf.label :video_url, 'Video URL:' %></td>
+              <td class="entry"><%= npf.text_field :video_url %></td>
+            </tr>
+          <% end.gsub(/\r|\n/, '').html_safe %>';
+          function switch_fields(num) {
+          $("ul.inner_menu span").removeClass("normal");
+          $("#shifting_fields").html(postcontent[num]);
+          switch(num) {
+          case 0: $("#switch_photo").addClass("normal"); $("#switch_news").addClass("normal"); break;
+          case 1: $("#switch_video").addClass("normal"); $("#switch_news").addClass("normal"); break;
+          case 2: $("#switch_video").addClass("normal"); $("#switch_photo").addClass("normal"); break;
+          }
+          }
       <% end %>
-      <li>
-        <div class="lbuttons clearfix content-switch">
-          <a id="switch_video" href="#" class="licon licon1 withtext left pressed">
-            <span>Video</span>
-          </a>
-          <a id="switch_photo" href="#" class="licon licon2 withtext middle">
-            <span>Photo</span>
-          </a>
-          <a id="switch_news" href="#" class="licon licon3 withtext middle">
-            <span>News</span>
-          </a>
-          <a id="switch_stats" href="#" class="licon licon4 withtext right">
-            <span>Stats</span>
-          </a>
-        </div>
-      </li>
-      <li id="shifting_fields">
-        <%= f.fields_for :video, Video.new do |vf| %>
-            <div class="field">
-              <%= vf.label :url %>
-              <br/>
-              <%= vf.text_field :url %>
+      <% content_for :jq do %>
+          $("#switch_video").click(function(){switch_fields(0); return false;});
+          $("#switch_photo").click(function(){switch_fields(1); return false;});
+          $("#switch_news").click(function(){switch_fields(2); return false;});
+          $("#news_add_photo").live('click',function(e){e.preventDefault(); $("#news_post_addons").hide(); $("#news_photo_div").show();});
+          $("#news_add_video").live('click',function(e){e.preventDefault(); $("#news_post_addons").hide(); $("#news_video_div").show();});
+      <% end %>
+        <div class="table_padding">
+          <table cellpadding="0" cellspacing="0">
+            <tr>
+              <td class="description"><%= f.label :type, 'Smack type:' %></td>
+              <td class="entry">
+                <ul class="inner_menu">
+                  <li>
+                    <span id="switch_video">Video</span>
+                  </li>
+                  <li>
+                    <span id="switch_photo" class="normal">Photo</span>
+                  </li>
+                  <li>
+                    <span id="switch_news" class="normal">News</span>
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td class="description"><%= f.label :title, 'Title:' %></td>
+              <td class="entry"><%= f.text_field :title %></td>
+            </tr>
+            <% if can? :manage, Post %>
+              <tr>
+                <td class="description"><%= f.label :on_frontpage_week, 'Smack of the Week on the week:' %></td>
+                <td class="entry"><%= f.select(:on_frontpage_week, (Date.today.cweek..52).to_a, {:include_blank => true}) %></td>
+              </tr>
+            <% end %>
+          </table>
+          <table id="shifting_fields" cellpadding="0" cellspacing="0">
+            <%= f.fields_for :video, Video.new do |vf| %>
+              <tr>
+                <td class="description"><%= vf.label :url, 'URL:' %></td>
+                <td class="entry"><%= vf.text_field :url %></td>
+              </tr>
+            <% end %>
+          </table>
+          <table cellpadding="0" cellspacing="0">
+            <tr>
+              <td class="description"><%= f.label :summary, 'Summary:' %></td>
+              <td class="entry"><%= f.text_area :summary %></td>
+            </tr>
+          </table>
+          <div class="confirmation_container clearfix">
+            <div class="accept clearfix">
+              <div class="important_notice clearfix">
+              </div>
+              <div class="blue_button"><%= f.submit "SUBMIT" %></div>
             </div>
-        <% end %>
-      </li>
-      <li>
-        <div class="field">
-          <%= f.label :summary %>
-          <br/>
-          <%= f.text_area :summary, :class => "comment" %>
+          </div>
         </div>
-      </li>
-    </ul>
-    <%= f.submit %>
-  <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
