--- a/public/stylesheets/contacts.css
+++ b/public/stylesheets/contacts.css
@@ -1,100 +1,109 @@
 .contacts_table {
-  background: #fff url(/images/contact_groups-bg.png) repeat-y left bottom;
-  clear: both;
-  overflow: hidden;
-  border-color: #DEDEDE;
-  border-style: solid;
-  border-width: 1px 0;
+    background: #fff url(/images/contact_groups-bg.png) repeat-y left bottom;
+    clear: both;
+    overflow: hidden;
+    border-color: #DEDEDE;
+    border-style: solid;
+    border-width: 1px 0;
 }
+
 .contacts .table_content {
-  float: left;
-  width: 600px;
-  padding: 0 10px 0 0;
+    float: left;
+    width: 600px;
+    padding: 0 10px 0 0;
 }
 
 .contacts .contact_groups {
-  float: left;
-  width: 137px;
+    float: left;
+    width: 137px;
 }
 
-  .contacts .contact_groups li:first-child {
+.contacts .contact_groups li:first-child {
     border-top: 3px solid #fff;
     border-right: 1px solid #DEDEDE;
     margin-top: -1px;
-  }
-  .contacts .contact_groups li a {
+}
+
+.contacts .contact_groups li a {
     display: block;
     border-bottom: 1px solid #DEDEDE;
     height: 19px;
-  }
-  .contacts .contact_groups li span {
+}
+
+.contacts .contact_groups li span {
     display: block;
     background: #fff;
     border-left: 1px solid #DEDEDE;
     border-bottom: 1px solid #DEDEDE;
-  }
+}
 
-  .contacts .contact_groups li a, .contacts .contact_groups li span {
+.contacts .contact_groups li a, .contacts .contact_groups li span {
     color: #09689e;
     line-height: 19px;
     padding: 0 10px;
     font-weight: bold;
     font-size: 12px;
-  }
+}
 
 .contacts .table_head, .contacts table {
-  width: 100%;
+    width: 100%;
 }
 
 .contacts .table_head {
-  padding: 8px 0;
-  overflow: hidden;
-  margin-left: 20px;
+    padding: 8px 0;
+    overflow: hidden;
+    margin-left: 20px;
 }
+
 .contacts .table_head ul {
-  float: left;
+    float: left;
 }
 
 .contacts .table_head li {
-  float: left;
-  margin-right: 5px;
+    float: left;
+    margin-right: 5px;
 }
 
 .contacts .table_head .button_bg {
-  float: left;
-  padding: 0 4px;
-  margin-right: 5px;
+    float: left;
+    padding: 0 4px;
+    margin-right: 5px;
 }
+
 .contacts .table_head .button_bg input {
-  margin: 0;
-  padding: 2px;
+    margin: 0;
+    padding: 2px;
 }
 
 .contacts table {
 }
 
 .contacts table td {
-  border-top: 1px solid #DEDEDE;
-  line-height: 20px;
-  font-size: 11px;
+    border-top: 1px solid #DEDEDE;
+    line-height: 20px;
+    font-size: 11px;
 }
 
-  .contacts table td input {
+.contacts table td input {
     display: inline;
-  }
+}
 
-  .contacts table td.table_preloader {
+.contacts table td.table_preloader {
     border-top: none;
     width: 20px;
-  }
+}
 
-  .contacts table td.table_check {
+.contacts table td.table_check {
     padding-left: 1px;
     width: 30px;
-  }
+}
 
-  .contacts table td.row_actions a {
+.contacts table td.row_actions a {
     display: inline-block;
     float: right;
     margin-top: 2px;
-  }
+}
+
+.image_load {
+    display: none;
+}
